--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="mainDiv">
             <h1>Generate a<br><span>random password</span></h1>
             <p>Never use an insecure password again.</p>
-            <button class="btn">Generate passwords</button>
+            <button class="btn" id="generateBtn">Generate passwords</button>
             <div class="line"></div>
             <div class="fieldDiv">
-                <div class="emptyField">dhdfh</div>
-                <div class="emptyField"></div>
+                <div class="emptyField" id="pwField">dhdfh</div>
             </div>
            
         </div>
     </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
