--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="mainDiv">
             <h1>Generate a<br><span>random password</span></h1>
             <p>Never use an insecure password again.</p>
-            <button class="btn" id="generateBtn">Generate passwords</button>
+            <button class="btn" id="generateBtn">Generate password</button>
             <div class="line"></div>
             <div class="fieldDiv">
-                <div class="emptyField" id="pwField">dhdfh</div>
+                <div class="emptyField" id="pwField">Password</div>
             </div>
            
         </div>
