--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         <div class="mainDiv">
             <h1>Generate a<br><span>random password</span></h1>
             <p>Never use an insecure password again.</p>
-            <button class="btn" id="generateBtn">Generate password</button>
+            
+            <div class="btnDiv">
+                <button class="btn" id="generateBtn">Generate password</button>
+                <a href="."" id="restartLink">Restart</a>
+            </div>
+
             <div class="line"></div>
+
             <div class="fieldDiv">
                 <div class="emptyField" id="pwField">Password</div>
             </div>
