Restart btn fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <div class="btnDiv">
                 <button class="btn" id="generateBtn">Generate password</button>
-                <a href="."" id="restartLink">Restart</a>
+                <button class="btn restart-btn" id="restartLink"><a href="."> Restart</a></button>
             </div>
 
             <div class="line"></div>
